Added forgotten changes

--- a/CsvtoolsCourseProject.ipynb
+++ b/CsvtoolsCourseProject.ipynb
@@ -799,6 +799,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### csvplot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And even plot the results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!cat yerevan_april_9.csv | csvcut -f price,district,area | csvmap '$price_per_meter = $price / $area' | csvreduce -k district -r avg[price_per_meter],count | csvplot -y avg_price_per_meter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![csvplot output](./csvplot_example.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### csvhead, csvtail"
    ]
   },
@@ -824,15 +856,6 @@
     "\n",
     "Formal specifications and some tips are available in my github repo https://github.com/onponomarev/csvtools"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
